chore. 소나큐브 이슈 처리